# LLM-Prompt-Library

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  README.md  conftest.py  index.html  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  static-site.yml
llm_prompt_library/: prompt_analyzer.py  prompt_mixer.py
llm_prompt_library/financial_metacognition/: financial_metacognition.py
prompts/: INDEX.md  README.md
prompts/creative_writing/: Dialogue Generator.md  Storyteller.md
prompts/healthcare/: Symptom Checker.md
prompts/legal/: Case Law Finder.md  Legal Contract Reviewer.md
prompts/marketing/: Ad Copy Generator.md  Social Media Post Optimizer.md
prompts/medical/: Clinical Trial Analyzer.md  Medical Q&A.md
prompts/miscellaneous/: antikythera.md  bitmap.md  textadventure.md
prompts/programming/: Wolfram.md  cursor_IDE_prompt.md
prompts/sales/: Sales Email Drafter.md
scripts/: __init__.py  build_index.py  prompt_analyzer.py  prompt_evolution.py  prompt_mixer.py  requirements.txt  token_counter.py  validate_prompts.py
scripts/financial_metacognition/: __init__.py  financial_metacognition.py
templates/ai_research/: ai_ablation_spec_generator_v1.j2  ai_benchmark_eval_runner_v1.j2  ai_dataset_bias_auditor_v1.j2  ai_exp_design_planner_v1.j2  ai_hparam_sweep_builder_v1.j2  ai_paper_abstract_writer_v1.j2  ai_repro_reporter_v1.j2  util_ai_macros.j2  (+1 more)
tests/: test_build_index.py  test_financial_metacognition.py  test_prompt_analyzer.py  test_prompt_evolution.py  test_prompt_mixer.py  test_token_counter.py
(+156 files in other folders)
