[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-prompt-library"
version = "0.1.0"
description = "Prompt library and CLI tools"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "LLM Prompt Library"}]

[project.scripts]
validate-prompts = "llm_prompt_library.validate_prompts:main"
build-index = "llm_prompt_library.build_index:main"
token-counter = "llm_prompt_library.token_counter:main"
prompt-analyzer = "llm_prompt_library.prompt_analyzer:main"
prompt-evolution = "llm_prompt_library.prompt_evolution:main"
prompt-mixer = "llm_prompt_library.prompt_mixer:main"
financial-metacognition = "llm_prompt_library.financial_metacognition.financial_metacognition:main"
